# SystemAbstractions

./: CMakeLists.txt  README.md
include/SystemAbstractions/: Clipboard.hpp  DiagnosticsContext.hpp  DiagnosticsSender.hpp  DiagnosticsStreamReporter.hpp  DirectoryMonitor.hpp  File.hpp  NetworkConnection.hpp  NetworkConnectionImpl.hpp  NetworkEndpoint.hpp  NetworkEndpointImpl.hpp  StringFile.hpp  Subprocess.hpp  TargetInfo.hpp  Time.hpp
src/: DiagnosticsContext.cpp  DiagnosticsSender.cpp  DiagnosticsStreamReporter.cpp  File.cpp  FileImpl.hpp  NetworkConnection.cpp  NetworkConnectionImpl.hpp  NetworkEndpoint.cpp  NetworkEndpointImpl.hpp  StringFile.cpp
src/Win32/: ClipboardWin32.cpp  DirectoryMonitorWin32.cpp  FileWin32.cpp  NetworkConnectionWin32.cpp  NetworkConnectionWin32.hpp  NetworkEndpointWin32.cpp  NetworkEndpointWin32.hpp  SubprocessWin32.cpp  TimeWin32.cpp
test/: CMakeLists.txt
test/MockDynamicLibrary/: CMakeLists.txt
test/MockSubprocess/: CMakeLists.txt
test/MockSubprocess/src/: main.cpp
test/src/: ClipboardTests.cpp  DiagnosticsContextTests.cpp  DiagnosticsSenderTests.cpp  DiagnosticsStreamReporterTests.cpp  DirectoryMonitorTests.cpp  DynamicLibraryTests.cpp  FileTests.cpp  NetworkConnectionTests.cpp  NetworkEndpointTests.cpp  StringExtensionsTests.cpp  StringFileTests.cpp  SubprocessTests.cpp
